--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,8 +10,10 @@ debugpy==1.8.14
 decorator==5.2.1
 exceptiongroup==1.2.2
 executing==2.2.0
+filelock==3.18.0
 flatbuffers==25.2.10
 fonttools==4.57.0
+fsspec==2025.3.2
 importlib_metadata==8.6.1
 importlib_resources==6.5.2
 ipykernel==6.29.5
@@ -19,14 +21,18 @@ ipython==8.18.1
 jax==0.4.30
 jaxlib==0.4.30
 jedi==0.19.2
+Jinja2==3.1.6
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
+MarkupSafe==3.0.2
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mediapipe==0.10.21
 ml_dtypes==0.5.1
+mpmath==1.3.0
 nest-asyncio==1.6.0
+networkx==3.4.2
 numpy==1.26.4
 opencv-contrib-python==4.11.0.86
 opencv-python==4.11.0.86
@@ -47,10 +53,15 @@ pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pyzmq==26.4.0
 scipy==1.13.1
+segment_anything @ git+https://github.com/facebookresearch/segment-anything.git@dca509fe793f601edb92606367a655c15ac00fdf
 sentencepiece==0.2.0
 six==1.17.0
 sounddevice==0.5.1
 stack-data==0.6.3
+sympy==1.14.0
+torch==2.7.0
+torchaudio==2.7.0
+torchvision==0.22.0
 tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.13.2
